--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Genshin Admin</title>
-    <link rel="shortcut icon" href="https://artur-petrov.vinnica.ua/public/gacha-simulator-static-data/assets/img/rarityStar.png" type="image/png">
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <title>Админка для Геншин гача бот</title>
+
+        <meta property="og:title" content="Админка для Геншин гача бот"/>
+        <meta property="og:type" content="article" />
+        <meta property="og:url" content="https://artur-petrov.vinnica.ua/gacha-simulator/admin/" />
+        <meta property="og:image" content="https://artur-petrov.vinnica.ua/public/gacha-simulator-static-data/assets/img/rarityStar.png" />
+        <meta property="og:description" content="Админка для тонкой настройки телеграм бота, редактирования баннеров, а так же добавления и редактирования промокодов."/>
+
+        <meta name="description" content="Админка для тонкой настройки телеграм бота, редактирования баннеров, а так же добавления и редактирования промокодов."/>
+
+        <link rel="shortcut icon" href="https://artur-petrov.vinnica.ua/public/gacha-simulator-static-data/assets/img/rarityStar.png" type="image/png">
   </head>
   <body>
     <style>
